force-app/main/default/objects/Case/fields/Primary_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Primary_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>