force-app/main/default/objects/Case/fields/Product_Information__c.field-meta.xml
<CustomField>
    <fullName>Product_Information__c</fullName>
    <formula>TEXT( Asset.Product2.Container_Size__c) + &apos; - &apos; + TEXT(Asset.Product2.Equipment_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Information</label>
    <type>Text</type>
</CustomField>