force-app/main/default/objects/Case/fields/Profile_Number__c.field-meta.xml
<CustomField>
    <fullName>Profile_Number__c</fullName>
    <label>Profile Number #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>