force-app/main/default/objects/Case/fields/Proposed_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Service_Date__c</fullName>
    <description>This field will be updated with the value of Proposed Service Date of Task</description>
    <label>Proposed Service Date</label>
    <type>Date</type>
</CustomField>