force-app/main/default/objects/Case/fields/PSI__c.field-meta.xml
<CustomField>
    <fullName>PSI__c</fullName>
    <description>PSI of the service</description>
    <label>PSI</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>