force-app/main/default/objects/Case/fields/PSI_Comments__c.field-meta.xml
<CustomField>
    <fullName>PSI_Comments__c</fullName>
    <inlineHelpText>Provide the PSI Comments if Bypass PSI Reason is selected as &apos;Other&apos;.</inlineHelpText>
    <label>PSI Comments</label>
    <type>TextArea</type>
</CustomField>