force-app/main/default/objects/Case/fields/PSI_Override_Reason__c.field-meta.xml
<CustomField>
    <fullName>PSI_Override_Reason__c</fullName>
    <label>Bypass PSI Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact Not Onsite</fullName>
            </value>
            <value>
                <fullName>Gauge Not Available/Broken</fullName>
            </value>
            <value>
                <fullName>Other Customer Request</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>Gauge is broken</fullName>
                <isActive>false</isActive>
                <label>Gauge is broken</label>
            </value>
            <value>
                <fullName>Offsite Requester</fullName>
                <isActive>false</isActive>
                <label>Offsite Requester</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>