force-app/main/default/objects/Case/fields/PSI_Required__c.field-meta.xml
<CustomField>
    <fullName>PSI_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PSI Required</label>
    <type>Checkbox</type>
</CustomField>