force-app/main/default/objects/Case/fields/PurchaseOrder_Number__c.field-meta.xml
<CustomField>
    <fullName>PurchaseOrder_Number__c</fullName>
    <description>PO Number for the case captured through the flow</description>
    <label>Customer PO #</label>
    <length>155</length>
    <type>Text</type>
</CustomField>