force-app/main/default/objects/Case/fields/PurchaseOrder_Override_Reason__c.field-meta.xml
<CustomField>
    <fullName>PurchaseOrder_Override_Reason__c</fullName>
    <description>This field is created to capture the reason for overriding the PurchaseOrder when it was required</description>
    <label>PurchaseOrder Override Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Emergency Request</fullName>
            </value>
            <value>
                <fullName>Not currently available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>