force-app/main/default/objects/Case/fields/PurchaseOrder_Required__c.field-meta.xml
<CustomField>
    <fullName>PurchaseOrder_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PurchaseOrder Required</label>
    <type>Checkbox</type>
</CustomField>