force-app/main/default/objects/Case/fields/Quantity_of_bale_wire_needed_per_cost__c.field-meta.xml
<CustomField>
    <fullName>Quantity_of_bale_wire_needed_per_cost__c</fullName>
    <inlineHelpText>Include unit cost.</inlineHelpText>
    <label>Quantity of bale wire needed (per cost)</label>
    <type>TextArea</type>
</CustomField>