force-app/main/default/objects/Case/fields/Quantity_of_keys_needed__c.field-meta.xml
<CustomField>
    <fullName>Quantity_of_keys_needed__c</fullName>
    <description>Quantity of additional keys needed</description>
    <label>Quantity of keys needed</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>