force-app/main/default/objects/Case/fields/Quote_Eligibility_Result__c.field-meta.xml
<CustomField>
    <fullName>Quote_Eligibility_Result__c</fullName>
    <description>Stores the quote eligibility result at the Case level to determine why transactions are and aren&apos;t capable of passing through the CPQ Process</description>
    <label>Quote Eligibility Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>