force-app/main/default/objects/Case/fields/Quote_Only_Email_Format__c.field-meta.xml
<CustomField>
    <fullName>Quote_Only_Email_Format__c</fullName>
    <description>Altering the display of the checkbox true/false value for email purposes.</description>
    <formula>IF( Quote_Only__c = true ,&quot;Yes&quot;, &quot;No&quot;)</formula>
    <label>Quote Only Email Format</label>
    <type>Text</type>
</CustomField>