force-app/main/default/objects/Case/fields/Reason_for_site_survey__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_site_survey__c</fullName>
    <inlineHelpText>Reason for site survey request--include all specifics.</inlineHelpText>
    <label>Reason for site survey request</label>
    <type>TextArea</type>
</CustomField>