force-app/main/default/objects/Case/fields/Recently_Modified__c.field-meta.xml
<CustomField>
    <fullName>Recently_Modified__c</fullName>
    <formula>if(   
DATEVALUE( LastModifiedDate )  =  DATEVALUE(NOW()) &amp;&amp;   
HOUR( TIMENOW() ) =  HOUR( TIMEVALUE(LastModifiedDate) ) &amp;&amp;
MINUTE(TIMENOW())-5 &lt; MINUTE(TIMEVALUE(LastModifiedDate)) ,true ,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recently Modified</label>
    <type>Checkbox</type>
</CustomField>