force-app/main/default/objects/Case/fields/Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Reference_Number__c</fullName>
    <description>This field contains the parent case number</description>
    <label>Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>