force-app/main/default/objects/Case/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <description>Acorn Ticket Requested by</description>
    <label>Requested By</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>