force-app/main/default/objects/Case/fields/Requested_By_User__c.field-meta.xml
<CustomField>
    <fullName>Requested_By_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested By User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requested_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>