force-app/main/default/objects/Case/fields/Required_Information__c.field-meta.xml
<CustomField>
    <fullName>Required_Information__c</fullName>
    <description>BR Required Information</description>
    <label>Required Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>