force-app/main/default/objects/Case/fields/Routing_Counter__c.field-meta.xml
<CustomField>
    <fullName>Routing_Counter__c</fullName>
    <label>Routing Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>