force-app/main/default/objects/Case/fields/SalesMeet_Container_Position__c.field-meta.xml
<CustomField>
    <fullName>SalesMeet_Container_Position__c</fullName>
    <label>Container Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>