force-app/main/default/objects/Case/fields/SalesMeet_Duration__c.field-meta.xml
<CustomField>
    <fullName>SalesMeet_Duration__c</fullName>
    <label>Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Temp</fullName>
            </value>
            <value>
                <fullName>Perm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>