force-app/main/default/objects/Case/fields/SalesMeet_Material__c.field-meta.xml
<CustomField>
    <fullName>SalesMeet_Material__c</fullName>
    <label>Material-T</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trash</fullName>
            </value>
            <value>
                <fullName>Cardboard</fullName>
            </value>
            <value>
                <fullName>C&amp;D</fullName>
            </value>
            <value>
                <fullName>Concrete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>