force-app/main/default/objects/Case/fields/SalesMeet_Occurance__c.field-meta.xml
<CustomField>
    <fullName>SalesMeet_Occurance__c</fullName>
    <label>Occurance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>On-call</fullName>
            </value>
            <value>
                <fullName>Scheduled On-call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>