force-app/main/default/objects/Case/fields/SalesMeet_Price__c.field-meta.xml
<CustomField>
    <fullName>SalesMeet_Price__c</fullName>
    <label>Price</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>