force-app/main/default/objects/Case/fields/SalesMeet_Quantity__c.field-meta.xml
<CustomField>
    <fullName>SalesMeet_Quantity__c</fullName>
    <label>Quantity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>