force-app/main/default/objects/Case/fields/SalesMeet_WM_Capacity__c.field-meta.xml
<CustomField>
    <fullName>SalesMeet_WM_Capacity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WM Capacity</label>
    <type>Checkbox</type>
</CustomField>