force-app/main/default/objects/Case/fields/Same_Next_Day__c.field-meta.xml
<CustomField>
    <fullName>Same_Next_Day__c</fullName>
    <defaultValue>false</defaultValue>
    <description>field indicating if the service is a same/next day service request</description>
    <label>Same/Next Day</label>
    <type>Checkbox</type>
</CustomField>