force-app/main/default/objects/Case/fields/SBID_text__c.field-meta.xml
<CustomField>
    <fullName>SBID_text__c</fullName>
    <description>Formula field to format SBID as text</description>
    <formula>TEXT( Acorn_SBID__c )</formula>
    <label>SBID text</label>
    <type>Text</type>
</CustomField>