force-app/main/default/objects/Case/fields/Scheduled_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Frequency__c</fullName>
    <label>Scheduled Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SalesMeet_Occurance__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>