force-app/main/default/objects/Case/fields/Secondary_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Secondary Supplier for Case</description>
    <label>Secondary Supplier Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Vendor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Secondary Supplier Name)</relationshipLabel>
    <relationshipName>Cases_Secondary_Supplier</relationshipName>
    <type>Lookup</type>
</CustomField>