force-app/main/default/objects/Case/fields/Selected_Asset_Header_Ids__c.field-meta.xml
<CustomField>
    <fullName>Selected_Asset_Header_Ids__c</fullName>
    <description>SDT-42417-To store the Asset Header Ids (separated by ;) selected on the Case</description>
    <label>Selected Asset Header Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>