force-app/main/default/objects/Case/fields/Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Date__c</fullName>
    <description>Date of service associated to the case</description>
    <label>Service Date</label>
    <type>Date</type>
</CustomField>