force-app/main/default/objects/Case/fields/Service_Date_for_CSC__c.field-meta.xml
<CustomField>
    <fullName>Service_Date_for_CSC__c</fullName>
    <description>This field is used to add 1 day to service date for creating Confirm Service Completion task</description>
    <formula>Service_Date__c+1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Date for CSC</label>
    <type>Date</type>
</CustomField>