force-app/main/default/objects/Case/fields/Service_Date_for_OSC__c.field-meta.xml
<CustomField>
    <fullName>Service_Date_for_OSC__c</fullName>
    <description>This field is used to subtract 7 days from service date for creating obtain schedule confirmation task</description>
    <formula>Service_Date__c -7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Date for OSC</label>
    <type>Date</type>
</CustomField>