force-app/main/default/objects/Case/fields/Service_Date_from_Local_Time__c.field-meta.xml
<CustomField>
    <fullName>Service_Date_from_Local_Time__c</fullName>
    <description>This is technical field used to update from local time field through workflow further to use in Backdated case logic</description>
    <label>Service Date from Local Time</label>
    <type>Date</type>
</CustomField>