force-app/main/default/objects/Case/fields/Service_Date_Text__c.field-meta.xml
<CustomField>
    <fullName>Service_Date_Text__c</fullName>
    <label>Service Date Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>