force-app/main/default/objects/Case/fields/Service_Date_Time_Formula__c.field-meta.xml
<CustomField>
    <fullName>Service_Date_Time_Formula__c</fullName>
    <formula>DATETIMEVALUE(Text(Service_Date__c)+&quot; 00:00:00&quot;)</formula>
    <label>Service Date Time Formula</label>
    <type>DateTime</type>
</CustomField>