force-app/main/default/objects/Case/fields/Service_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_End_Date__c</fullName>
    <description>The requested service end date</description>
    <inlineHelpText>The requested service end date</inlineHelpText>
    <label>Service End Date</label>
    <type>Date</type>
</CustomField>