force-app/main/default/objects/Case/fields/Service_Occurrence_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Service_Occurrence_Type_Code__c</fullName>
    <description>Service Occurrence Type Code information to support  SFDC to Acron Integration</description>
    <label>Service Occurrence Type</label>
    <length>125</length>
    <type>Text</type>
</CustomField>