force-app/main/default/objects/Case/fields/Service_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Start_Date__c</fullName>
    <description>The requested service start date</description>
    <inlineHelpText>The requested service start date</inlineHelpText>
    <label>Service Start Date</label>
    <type>Date</type>
</CustomField>