force-app/main/default/objects/Case/fields/Show_Multiple_Asset_Cases__c.field-meta.xml
<CustomField>
    <fullName>Show_Multiple_Asset_Cases__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Multiple Asset Cases</label>
    <type>Checkbox</type>
</CustomField>