force-app/main/default/objects/Case/fields/Site_Contact__c.field-meta.xml
<CustomField>
    <fullName>Site_Contact__c</fullName>
    <description>Site contact captured on the case</description>
    <label>Onsite Contact Name</label>
    <length>155</length>
    <type>Text</type>
</CustomField>