force-app/main/default/objects/Case/fields/Site_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Site_Contact_Phone__c</fullName>
    <label>Onsite Contact Number</label>
    <type>Phone</type>
</CustomField>