force-app/main/default/objects/Case/fields/Site_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Site_Restrictions__c</fullName>
    <label>Site Restrictions</label>
    <type>TextArea</type>
</CustomField>