force-app/main/default/objects/Case/fields/SLA_Date_Text__c.field-meta.xml
<CustomField>
    <fullName>SLA_Date_Text__c</fullName>
    <description>string SLA date</description>
    <label>SLA Date Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>