force-app/main/default/objects/Case/fields/SLA_Override_Comment__c.field-meta.xml
<CustomField>
    <fullName>SLA_Override_Comment__c</fullName>
    <inlineHelpText>Provide the SLA Override Comments if Bypass SLA Override Reason is selected as &apos;Other&apos;.</inlineHelpText>
    <label>SLA Override Comment</label>
    <type>TextArea</type>
</CustomField>