force-app/main/default/objects/Case/fields/SLA_Override_Reason__c.field-meta.xml
<CustomField>
    <fullName>SLA_Override_Reason__c</fullName>
    <description>The field provide SLA Override reason in the case when the Service Date is not equal to the SLA Date.</description>
    <label>SLA Override Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Repairs</fullName>
            </value>
            <value>
                <fullName>Corporate Visit/Walkthrough</fullName>
            </value>
            <value>
                <fullName>Power Outage</fullName>
            </value>
            <value>
                <fullName>Potential Violation</fullName>
            </value>
            <value>
                <fullName>Weather/Natural Disaster</fullName>
            </value>
            <value>
                <fullName>Internal Error</fullName>
            </value>
            <value>
                <fullName>Vendor Error</fullName>
            </value>
            <value>
                <fullName>Vendor not able to meet SLA</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>