force-app/main/default/objects/Case/fields/SLA_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>SLA_Service_Date__c</fullName>
    <label>SLA Service Date</label>
    <type>Date</type>
</CustomField>