force-app/main/default/objects/Case/fields/SLA_Service_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>SLA_Service_Date_Time__c</fullName>
    <label>SLA Service Date/Time</label>
    <type>DateTime</type>
</CustomField>