force-app/main/default/objects/Case/fields/Standard_Portable_Count__c.field-meta.xml
<CustomField>
    <fullName>Standard_Portable_Count__c</fullName>
    <description>Asset/Product related questionnaire information on a Case to support  SFDC to Acron Integration</description>
    <label>Standard Portable Count</label>
    <length>50</length>
    <type>Text</type>
</CustomField>