force-app/main/default/objects/Case/fields/Stop_All_Services_for_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Stop_All_Services_for_Vendor__c</fullName>
    <label>Stop All Services for Vendor?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>