force-app/main/default/objects/Case/fields/SubType__c.field-meta.xml
<CustomField>
    <fullName>SubType__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Empty and Return</fullName>
            </value>
            <value>
                <fullName>ETA</fullName>
            </value>
            <value>
                <fullName>Existing Service Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>