force-app/main/default/objects/Case/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary Supplier for this Case</description>
    <label>Supplier Name</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria. - Case.Supplier</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Vendor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Primary Supplier)</relationshipLabel>
    <relationshipName>Cases_Supplier1</relationshipName>
    <type>Lookup</type>
</CustomField>