force-app/main/default/objects/Case/fields/Suppress_Auto_Response__c.field-meta.xml
<CustomField>
    <fullName>Suppress_Auto_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do not send Auto Response for Email2Case if Attaching to different Case</description>
    <label>Suppress Auto Response</label>
    <type>Checkbox</type>
</CustomField>