force-app/main/default/objects/Case/fields/Survey_Intent__c.field-meta.xml
<CustomField>
    <fullName>Survey_Intent__c</fullName>
    <label>Survey Intent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>