force-app/main/default/objects/Case/fields/Survey_Type__c.field-meta.xml
<CustomField>
    <fullName>Survey_Type__c</fullName>
    <label>Survey Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compactor Waste Assessment</fullName>
            </value>
            <value>
                <fullName>Front Load Visual Waste Audit</fullName>
            </value>
            <value>
                <fullName>Front Load Waste Breakdown</fullName>
            </value>
            <value>
                <fullName>Compactor Weigh and Sort</fullName>
            </value>
            <value>
                <fullName>Full Site Assessment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>