force-app/main/default/objects/Case/fields/System_Gen_WO_Instructions__c.field-meta.xml
<CustomField>
    <fullName>System_Gen_WO_Instructions__c</fullName>
    <description>Field to contain system generated text for WO instructions</description>
    <label>System Gen WO Instructions</label>
    <type>TextArea</type>
</CustomField>