force-app/main/default/objects/Case/fields/Task_Count__c.field-meta.xml
<CustomField>
    <fullName>Task_Count__c</fullName>
    <label>Task Count</label>
    <summaryForeignKey>Case_Task_Tracker__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>