force-app/main/default/objects/Case/fields/Task_Id_For_Flow_URL__c.field-meta.xml
<CustomField>
    <fullName>Task_Id_For_Flow_URL__c</fullName>
    <description>This is technical field which holds the Task ID to use in &quot;Flow URL&quot; Field</description>
    <label>Task Id For Flow URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>