force-app/main/default/objects/Case/fields/Task_Resume_Time__c.field-meta.xml
<CustomField>
    <fullName>Task_Resume_Time__c</fullName>
    <label>Task Resume Time</label>
    <type>DateTime</type>
</CustomField>