force-app/main/default/objects/Case/fields/Team_Queue__c.field-meta.xml
<CustomField>
    <fullName>Team_Queue__c</fullName>
    <description>Acorn Team Queue</description>
    <label>Team Queue</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Team_Name__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Case_Team_Queue</valueSetName>
    </valueSet>
</CustomField>