force-app/main/default/objects/Case/fields/Tech_Asset_ProductFamily__c.field-meta.xml
<CustomField>
    <fullName>Tech_Asset_ProductFamily__c</fullName>
    <description>This field is updated with ProductFamily field of Asset to use in Flow</description>
    <formula>Text(Asset.Product2.Family)</formula>
    <label>Asset ProductFamily</label>
    <type>Text</type>
</CustomField>