force-app/main/default/objects/Case/fields/Tech_Location_Details__c.field-meta.xml
<CustomField>
    <fullName>Tech_Location_Details__c</fullName>
    <description>This field is used to fetch Location details wherein will be used in Email Templates</description>
    <formula>IF(AND(NOT(ISBLANK(Location__r.Location_Code__c)), NOT(ISBLANK(Location__r.Location_Code__c)), Location__r.Name == Location__r.Location_Code__c),&quot;&quot;,
Location__r.Location_Code__c+&quot;,&quot;+ BR()) +
Location__r.ShippingStreet+ BR() +
Location__r.ShippingCity+&quot;, &quot;+Location__r.ShippingState + BR() +
Location__r.ShippingPostalCode+&quot;, &quot;+Location__r.ShippingCountry</formula>
    <label>Location Details</label>
    <type>Text</type>
</CustomField>