force-app/main/default/objects/Case/fields/Temp_Asset_needed__c.field-meta.xml
<CustomField>
    <fullName>Temp_Asset_needed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporary arrangement to be done in case of any leakage to Compactor</description>
    <label>Temp Asset needed?</label>
    <type>Checkbox</type>
</CustomField>