force-app/main/default/objects/Case/fields/Ticket_Template_Tool__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Template_Tool__c</fullName>
    <formula>HYPERLINK(&apos;https://wmsbs.my.salesforce.com/sfc/p/1I000001V0eB/a/1I000000TcAU/O0bSGBtYP2sTO.6qMFSNz.7pawBfinPjbJE0.c.UWoQ&apos;, &apos;Ticket Template Tool&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ticket Template Tool</label>
    <type>Text</type>
</CustomField>