force-app/main/default/objects/Case/fields/Time_Testing_Temp__c.field-meta.xml
<CustomField>
    <fullName>Time_Testing_Temp__c</fullName>
    <formula>NOW()- 0.03800</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Testing Temp</label>
    <type>DateTime</type>
</CustomField>