force-app/main/default/objects/Case/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <description>Acorn Issue Tracking Number, AKA T-Number</description>
    <label>Tracking Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>